--- a/notebook/data_analysis.ipynb
+++ b/notebook/data_analysis.ipynb
@@ -19,21 +19,21 @@
    "outputs": [],
    "source": [
     "template_df = pd.read_csv(\n",
-    "    './data/ML-CUP23-Template_example.csv',\n",
+    "    '../data/ML-CUP23-Template_example.csv',\n",
     "    index_col=0,\n",
     "    comment='#',\n",
     "    header=None,\n",
     "    names=['output_' + str(i+1) for i in range(3)]\n",
     ")\n",
     "training_df = pd.read_csv(\n",
-    "    './data/ML-CUP23-TR.csv',\n",
+    "    '../data/ML-CUP23-TR.csv',\n",
     "    index_col=0,\n",
     "    comment='#',\n",
     "    header=None,\n",
     "    names=['feature_' + str(i+1) for i in range(10)] + ['target_' + str(i+1) for i in range(3)]\n",
     ")\n",
     "test_df = pd.read_csv(\n",
-    "    './data/ML-CUP23-TS.csv',\n",
+    "    '../data/ML-CUP23-TS.csv',\n",
     "    index_col=0,\n",
     "    comment='#',\n",
     "    header=None,\n",
