--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -10,8 +10,11 @@
     "import numpy as np\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath('./src/'))\n",
-    "from ActivationFunctions import *"
+    "\n",
+    "sys.path.append(os.path.abspath('../src/'))\n",
+    "from ActivationFunctions import *\n",
+    "from NeuralNetwork import *\n",
+    "from nn_utils import *"
    ]
   },
   {
@@ -208,13 +211,6 @@
     "a = [1,2,3,4,5]\n",
     "a[1:-1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
