--- a/notebook/nn_test_complex.ipynb
+++ b/notebook/nn_test_complex.ipynb
@@ -242,10 +242,10 @@
     "tr_output = 2\n",
     "len_dataset = 1000\n",
     "\n",
-    "f1 = lambda x : x[2]*2 + x[1]*3 - x[0] - 50\n",
-    "f2 = lambda x : x[2]*1.3 - x[1]**2 + x[0]*3 + 25\n",
+    "f1 = lambda x : x[2]*2 + x[1]*3 - x[0] - 5\n",
+    "f2 = lambda x : x[2]*1.3 - x[1]**2 + x[0]*3 + 2.5\n",
     "\n",
-    "tr = create_dataset(len_dataset, tr_input, [0, 100, 1], [f1, f2], RANDOM_STATE)\n",
+    "tr = create_dataset(len_dataset, tr_input, [0, 10], [f1, f2], RANDOM_STATE)\n",
     "tr.sample(10, random_state=RANDOM_STATE)"
    ]
   },
