--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -14,7 +14,7 @@
     "sys.path.append(os.path.abspath('../src/'))\n",
     "from ActivationFunctions import *\n",
     "from NeuralNetwork import *\n",
-    "from nn_utils import *"
+    "from MyUtils import *"
    ]
   },
   {
