Update Model Selection (TODO: testare ancora)

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -184,90 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.empty((14,10))\n",
-    "len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4,5]\n",
-    "a[1:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [1,2,3,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test if parallelism with processes reduce time\n",
-    "'''\n",
-    "import multiprocessing as mp\n",
-    "import numpy as np\n",
-    "\n",
-    "def f(x):\n",
-    "    return x*x \n",
-    "\n",
-    "dim = 10000000\n",
-    "\n",
-    "a = np.random.rand(dim)\n",
-    "\n",
-    "pool = mp.Pool(mp.cpu_count())\n",
-    "\n",
-    "pool.map(f, a)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['lambda_tikhonov', 'alpha_momentum', 'learning_rate']\n",
-      "[(0.1, 0, 0.021), (0.1, 0, 0.02), (0.1, 0, 0.01), (0.1, 2, 0.021), (0.1, 2, 0.02), (0.1, 2, 0.01), (0.1, 1, 0.021), (0.1, 1, 0.02), (0.1, 1, 0.01), (0.2, 0, 0.021), (0.2, 0, 0.02), (0.2, 0, 0.01), (0.2, 2, 0.021), (0.2, 2, 0.02), (0.2, 2, 0.01), (0.2, 1, 0.021), (0.2, 1, 0.02), (0.2, 1, 0.01), (0.3, 0, 0.021), (0.3, 0, 0.02), (0.3, 0, 0.01), (0.3, 2, 0.021), (0.3, 2, 0.02), (0.3, 2, 0.01), (0.3, 1, 0.021), (0.3, 1, 0.02), (0.3, 1, 0.01)]\n"
+      "wewe"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
