--- a/notebook/nn_sigmoid.ipynb
+++ b/notebook/nn_sigmoid.ipynb
@@ -231,21 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.01, 0, 0.002, 2)\n",
-      "(0.01, 0, 0.001, 2)\n",
-      "(0.01, 0.002, 0.002, 2)\n",
-      "(0.01, 0.002, 0.001, 2)\n",
-      "(0.02, 0, 0.002, 2)\n",
-      "(0.02, 0, 0.001, 2)\n",
-      "(0.02, 0.002, 0.002, 2)\n",
-      "(0.02, 0.002, 0.001, 2)\n"
+      "500\n",
+      "500\n",
+      "500\n",
+      "500\n",
+      "500\n",
+      "500\n",
+      "500\n",
+      "500\n"
      ]
     }
    ],
@@ -261,7 +261,8 @@
     "    \"lambda_tikhonov\": [0.01, 0.02],\n",
     "    \"alpha_momentum\": [0, 0.002],\n",
     "    \"learning_rate\": [0.002, 0.001],\n",
-    "    \"max_epochs\": [2],\n",
+    "    \"max_epochs\": [500],\n",
+    "    \"min_epochs\": [100],    \n",
     "}\n",
     "\n",
     "ms.grid_searchHO(tr_normalized, val_normalized, hyper_param, topology)"
