Update Model Selection with csv files

--- a/notebook/nn_sigmoid.ipynb
+++ b/notebook/nn_sigmoid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        " 6: ['output_2', 'identity', [], []]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "99  -9.350141  5.849679 -104.141579"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,41 +231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "500\n",
-      "500\n",
-      "500\n",
-      "500\n",
-      "500\n",
-      "500\n",
-      "500\n",
-      "500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test Model Selection\n",
     "from ModelSelection import ModelSelection\n",
     "\n",
     "data_set = numpy.append(tr_normalized, val_normalized, axis=0)\n",
     "\n",
-    "ms = ModelSelection('prova.csv', 'prova.json')\n",
+    "ms = ModelSelection('final_results.csv', 'prova.json')\n",
     "\n",
     "hyper_param = {\n",
     "    \"lambda_tikhonov\": [0.01, 0.02],\n",
     "    \"alpha_momentum\": [0, 0.002],\n",
     "    \"learning_rate\": [0.002, 0.001],\n",
-    "    \"max_epochs\": [500],\n",
-    "    \"min_epochs\": [100],    \n",
+    "    \"max_epochs\": [12],\n",
+    "    \"min_epochs\": [10],    \n",
     "}\n",
     "\n",
-    "ms.grid_searchHO(tr_normalized, val_normalized, hyper_param, topology)"
+    "ms.grid_searchHO(tr_normalized, val_normalized, hyper_param, topology, 2)"
    ]
   },
   {
