Update Hold Out validation

--- a/notebook/validation_test.ipynb
+++ b/notebook/validation_test.ipynb
@@ -604,14 +604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jacopo/Desktop/ML_Proj_NN/src/ModelSelection.py:220: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/home/jacopo/Desktop/ML_Proj_NN/src/ModelSelection.py:218: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
      ]
     }
@@ -640,7 +640,7 @@
     "    'patience':[50],\n",
     "    'topology': [str(topology)]\n",
     "}\n",
-    "MS.grid_searchKF(training_set, hyperparam_grid, 2, 3, True)"
+    "MS.grid_searchHO(training_set, validation_set,  hyperparam_grid, 2, True)"
    ]
   }
  ],
