--- a/notebook/validation_test.ipynb
+++ b/notebook/validation_test.ipynb
@@ -604,15 +604,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jacopo/Desktop/ML_Proj_NN/src/ModelSelection.py:218: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
+      "Training a new model :  [12, 1000, 0.0001, 50, 80, 0.5, 0.1, 0.5, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]\n",
+      "Training a new model :  [12, 1000, 0.0001, 50, 80, 0.005, 0.1, 0.5, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]Training a new model : \n",
+      " [12, 1000, 0.0001, 50, 80, 0.05, 0.1, 0.01, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]\n",
+      "Training a new model :  [12, 1000, 0.0001, 50, 80, 0.005, 0.1, 0.01, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a new model :  [12, 1000, 0.0001, 50, 80, 0.5, 0.1, 0.01, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]\n",
+      "Training a new model :  [12, 1000, 0.0001, 50, 80, 0.05, 0.1, 0.5, [<function mean_squared_error at 0x7f5a2a11ac00>], False, False, False]\n"
      ]
     }
    ],
@@ -621,26 +631,183 @@
     "validation_set = val_df_OHE.values\n",
     "metrics = [ErrorFunctions.mean_squared_error, ] #ErrorFunctions.mean_euclidean_error, \n",
     "\n",
-    "\n",
+    "full_dataset = np.concatenate((training_set, validation_set), axis=0)\n",
     "\n",
     "collect_data = True\n",
     "collect_data_batch = False # per il momento. molto costoso!!!! False di default\n",
     "verbose = True\n",
     "\n",
-    "#stats = NN.train(training_set, validation_set, batch_size, max_epochs, error_decrease_tolerance, patience, min_epochs, \n",
-    "#                   learning_rate, lambda_tikhonov, alpha_momentum, metrics, collect_data, collect_data_batch, verbose)\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.1, 0.001],\n",
-    "    'alpha_momentum':[0, 0.01],\n",
-    "    'lambda_tikhonov':[0.01, 0.2],\n",
+    "    'learning_rate':[0.5, 0.05, 0.005],\n",
+    "    'alpha_momentum':[0.5, 0.01],\n",
+    "    'lambda_tikhonov':[0.01, 0.001, 0.1],\n",
     "    'batch_size':[1, int(len_training/10)],\n",
-    "    'min_epochs': [5, 6],\n",
-    "    'max_epochs':[10],\n",
+    "    'min_epochs': [80],\n",
+    "    'max_epochs':[1000],\n",
     "    'error_decrease_tolerance':[0.0001],\n",
     "    'patience':[50],\n",
     "    'topology': [str(topology)]\n",
     "}\n",
-    "MS.grid_searchHO(training_set, validation_set,  hyperparam_grid, 2, True)"
+    "MS.grid_searchKF(full_dataset, hyperparam_grid, 3, 4, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>batch_size</th>\n",
+       "      <th>error_decrease_tolerance</th>\n",
+       "      <th>lambda_tikhonov</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>max_epochs</th>\n",
+       "      <th>min_epochs</th>\n",
+       "      <th>patience</th>\n",
+       "      <th>topology</th>\n",
+       "      <th>stats</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alpha_momentum</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.01</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
+       "      <td>{'max_epochs': 1000, 'alpha_momentum': 0.01, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.01</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
+       "      <td>{'max_epochs': 1000, 'alpha_momentum': 0.01, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.01</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
+       "      <td>{'max_epochs': 1000, 'alpha_momentum': 0.01, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.01</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
+       "      <td>{'max_epochs': 1000, 'alpha_momentum': 0.01, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
+       "      <td>{'max_epochs': 1000, 'alpha_momentum': 0.5, 't...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                batch_size  error_decrease_tolerance  lambda_tikhonov  \\\n",
+       "alpha_momentum                                                          \n",
+       "0.01                     1                    0.0001            0.010   \n",
+       "0.01                    12                    0.0001            0.001   \n",
+       "0.01                    12                    0.0001            0.010   \n",
+       "0.01                    12                    0.0001            0.001   \n",
+       "0.50                    12                    0.0001            0.001   \n",
+       "\n",
+       "                learning_rate  max_epochs  min_epochs  patience  \\\n",
+       "alpha_momentum                                                    \n",
+       "0.01                    0.005        1000          80        50   \n",
+       "0.01                    0.500        1000          80        50   \n",
+       "0.01                    0.050        1000          80        50   \n",
+       "0.01                    0.050        1000          80        50   \n",
+       "0.50                    0.005        1000          80        50   \n",
+       "\n",
+       "                                                         topology  \\\n",
+       "alpha_momentum                                                      \n",
+       "0.01            {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
+       "0.01            {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
+       "0.01            {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
+       "0.01            {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
+       "0.50            {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
+       "\n",
+       "                                                            stats  \n",
+       "alpha_momentum                                                     \n",
+       "0.01            {'max_epochs': 1000, 'alpha_momentum': 0.01, '...  \n",
+       "0.01            {'max_epochs': 1000, 'alpha_momentum': 0.01, '...  \n",
+       "0.01            {'max_epochs': 1000, 'alpha_momentum': 0.01, '...  \n",
+       "0.01            {'max_epochs': 1000, 'alpha_momentum': 0.01, '...  \n",
+       "0.50            {'max_epochs': 1000, 'alpha_momentum': 0.5, 't...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monk_3_results = pd.read_csv('GS_1.csv', index_col=0)\n",
+    "\n",
+    "monk_3_results.sample(5, random_state=RANDOM_STATE)"
    ]
   }
  ],
