--- a/notebook/nn_test_monk_2.ipynb
+++ b/notebook/nn_test_monk_2.ipynb
@@ -17,6 +17,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "sys.path.append(os.path.abspath('../src/'))\n",
+    "from ModelSelection import *\n",
     "from ActivationFunctions import *\n",
     "from NeuralNetwork import *\n",
     "from MyUtils import *"
@@ -568,6 +569,30 @@
     "topology = create_stratified_topology([TR_INPUT,hidden_len,TR_OUTPUT], \n",
     "                                      [[None,[]]]*TR_INPUT + [['sigmoid', [1]]]*hidden_len + [['sigmoid', [1]]])\n",
     "NeuralNetwork.display_topology(topology)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MS = ModelSelection('../data/gs_data/monk_2_selection.csv')\n",
+    "\n",
+    "hyperparam_grid = {\n",
+    "    'learning_rate':[0.2,0.4,0.6,0.8],\n",
+    "    'alpha_momentum':[0.2,0.4,0.6,0.8],\n",
+    "    'lambda_tikhonov':[0],\n",
+    "    'batch_size':[int(len(training_set)/15), int(len(training_set)/3)],\n",
+    "    'min_epochs': [80],\n",
+    "    'max_epochs':[1000],\n",
+    "    'error_decrease_tolerance':[0.00001],\n",
+    "    'patience':[50],\n",
+    "    'lr_decay_tau':[500],\n",
+    "    'topology': [str(topology)],\n",
+    "}\n",
+    "\n",
+    "MS.grid_searchKF(training_set, hyperparam_grid, 10, 4, False)"
    ]
   },
   {
@@ -6225,7 +6250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
