--- a/notebook/nn_test_monk_1.ipynb
+++ b/notebook/nn_test_monk_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "389        3        3        1        1        3        2         1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "123     False      True         1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "389     False      True         1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "124\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
     "training_set = tr_df_OHE.values\n",
     "validation_set = val_df_OHE.values\n",
     "\n",
-    "print(type(training_set))"
+    "print(len(training_set))"
    ]
   },
   {
@@ -617,18 +617,19 @@
     "MS = ModelSelection('../data/gs_data/monk_1_selection.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.7,0.8,0.9],\n",
-    "    'alpha_momentum':[0.7,0.8,0.9],\n",
+    "    'learning_rate':[0.2,0.4,0.6,0.8],\n",
+    "    'alpha_momentum':[0.2,0.4,0.6,0.8],\n",
     "    'lambda_tikhonov':[0],\n",
-    "    'batch_size':[int(len(training_set)/15)],\n",
-    "    'min_epochs': [1],\n",
-    "    'max_epochs':[10],\n",
-    "    'error_decrease_tolerance':[0.0000001],\n",
+    "    'batch_size':[int(len(training_set)/15), int(len(training_set)/3)],\n",
+    "    'min_epochs': [80],\n",
+    "    'max_epochs':[1000],\n",
+    "    'error_decrease_tolerance':[0.00001],\n",
     "    'patience':[50],\n",
+    "    'lr_decay_tau':[500],\n",
     "    'topology': [str(topology)],\n",
-    "    'nesterov':[True],\n",
     "}\n",
-    "MS.grid_searchKF(training_set, hyperparam_grid, 10, 1, False)"
+    "\n",
+    "MS.grid_searchKF(training_set, hyperparam_grid, 10, 4, False)"
    ]
   },
   {
