Add shuffling data

--- a/notebook/nn_test_monk_2.ipynb
+++ b/notebook/nn_test_monk_2.ipynb
@@ -580,19 +580,18 @@
     "MS = ModelSelection('../data/gs_data/monk_2_selection.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.2,0.4,0.6,0.8],\n",
-    "    'alpha_momentum':[0.2,0.4,0.6,0.8],\n",
+    "    'learning_rate':[0.1,0.2,0.3,0.4,0.5],\n",
+    "    'alpha_momentum':[0.3,0.4,0.5,0.6,0.7],\n",
     "    'lambda_tikhonov':[0],\n",
-    "    'batch_size':[int(len(training_set)/15), int(len(training_set)/3)],\n",
+    "    'batch_size':[int(len(training_set)/15), 1, int(len(training_set)*0.8)], # minibatch, online, batch\n",
     "    'min_epochs': [80],\n",
-    "    'max_epochs':[1000],\n",
+    "    'max_epochs':[600],\n",
     "    'error_decrease_tolerance':[0.00001],\n",
     "    'patience':[50],\n",
-    "    'lr_decay_tau':[500],\n",
     "    'topology': [str(topology)],\n",
     "}\n",
     "\n",
-    "MS.grid_searchKF(training_set, hyperparam_grid, 10, 4, False)"
+    "MS.grid_searchKF(training_set, hyperparam_grid, 5, 4, False)"
    ]
   },
   {
