--- a/notebook/nn_test_monk_1.ipynb
+++ b/notebook/nn_test_monk_1.ipynb
@@ -1669,26 +1669,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MS = ModelSelection('../data/gs_data/monk_1_selection.csv')\n",
+    "MS = ModelSelection('monk_bla_selection.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.5,0.6,0.7,0.8,0.9],\n",
-    "    'alpha_momentum':[0.4,0.5,0.6,0.7,0.8,0.9],\n",
+    "    'learning_rate':[0.5,0.6],\n",
+    "    'adamax' : [False],\n",
+    "    'alpha_momentum':[0.4,0.5],\n",
     "    'lambda_tikhonov':[0],\n",
     "    'batch_size':[5, 8],\n",
-    "    'min_epochs': [80],\n",
-    "    'max_epochs':[600],\n",
-    "    'error_decrease_tolerance':[0.00000001],\n",
+    "    'min_epochs': [1],\n",
+    "    'max_epochs':[2],\n",
+    "    'error_increase_tolerance':[0.00000001],\n",
     "    'patience':[50],\n",
     "    'topology': [str(topology)],\n",
     "}\n",
     "\n",
-    "MS.grid_searchKF(training_set, hyperparam_grid, 5, 4, False)"
+    "MS.grid_searchKF(training_set, hyperparam_grid, {}, 5, 1, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1735,8 +1736,6 @@
        "      <th>max_epochs</th>\n",
        "      <th>min_epochs</th>\n",
        "      <th>patience</th>\n",
-       "      <th>topology</th>\n",
-       "      <th>stats</th>\n",
        "      <th>mean_metrics</th>\n",
        "      <th>variance_metrics</th>\n",
        "    </tr>\n",
@@ -1752,8 +1751,6 @@
        "      <td>600</td>\n",
        "      <td>80</td>\n",
        "      <td>50</td>\n",
-       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
-       "      <td>{'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...</td>\n",
        "      <td>[0.05366889570226624]</td>\n",
        "      <td>[0.0022088002976952703]</td>\n",
        "    </tr>\n",
@@ -1767,8 +1764,6 @@
        "      <td>600</td>\n",
        "      <td>80</td>\n",
        "      <td>50</td>\n",
-       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
-       "      <td>{'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...</td>\n",
        "      <td>[0.05486601096901263]</td>\n",
        "      <td>[0.002637810196543145]</td>\n",
        "    </tr>\n",
@@ -1782,8 +1777,6 @@
        "      <td>600</td>\n",
        "      <td>80</td>\n",
        "      <td>50</td>\n",
-       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
-       "      <td>{'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...</td>\n",
        "      <td>[0.06383480719966235]</td>\n",
        "      <td>[0.002266936382419492]</td>\n",
        "    </tr>\n",
@@ -1797,8 +1790,6 @@
        "      <td>600</td>\n",
        "      <td>80</td>\n",
        "      <td>50</td>\n",
-       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
-       "      <td>{'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...</td>\n",
        "      <td>[0.0688110884419551]</td>\n",
        "      <td>[0.00332935855501964]</td>\n",
        "    </tr>\n",
@@ -1812,10 +1803,73 @@
        "      <td>600</td>\n",
        "      <td>80</td>\n",
        "      <td>50</td>\n",
-       "      <td>{0: ['input_0', None, [], [17, 18, 19, 20]], 1...</td>\n",
-       "      <td>{'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...</td>\n",
        "      <td>[0.08833891183080093]</td>\n",
        "      <td>[9.831747849976705e-05]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>0.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.000000e-08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>[0.09100669311494262]</td>\n",
+       "      <td>[0.0023613496960930794]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.000000e-08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>[0.09284368234439086]</td>\n",
+       "      <td>[0.009874041411055403]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.000000e-08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>[0.09554607444843632]</td>\n",
+       "      <td>[0.0018015402965530375]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.000000e-08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>[0.09615418500717368]</td>\n",
+       "      <td>[0.004677902041038896]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.000000e-08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>600</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>[0.0970669556846124]</td>\n",
+       "      <td>[0.00032474112208915815]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1828,43 +1882,44 @@
        "13             0.8           5              1.000000e-08                0   \n",
        "23             0.9           5              1.000000e-08                0   \n",
        "4              0.7           5              1.000000e-08                0   \n",
+       "51             0.6           5              1.000000e-08                0   \n",
+       "44             0.5           5              1.000000e-08                0   \n",
+       "12             0.8           5              1.000000e-08                0   \n",
+       "40             0.5           5              1.000000e-08                0   \n",
+       "45             0.5           8              1.000000e-08                0   \n",
        "\n",
-       "    learning_rate  max_epochs  min_epochs  patience  \\\n",
-       "43            0.8         600          80        50   \n",
-       "21            0.6         600          80        50   \n",
-       "13            0.8         600          80        50   \n",
-       "23            0.8         600          80        50   \n",
-       "4             0.9         600          80        50   \n",
+       "    learning_rate  max_epochs  min_epochs  patience           mean_metrics  \\\n",
+       "43            0.8         600          80        50  [0.05366889570226624]   \n",
+       "21            0.6         600          80        50  [0.05486601096901263]   \n",
+       "13            0.8         600          80        50  [0.06383480719966235]   \n",
+       "23            0.8         600          80        50   [0.0688110884419551]   \n",
+       "4             0.9         600          80        50  [0.08833891183080093]   \n",
+       "51            0.6         600          80        50  [0.09100669311494262]   \n",
+       "44            0.9         600          80        50  [0.09284368234439086]   \n",
+       "12            0.7         600          80        50  [0.09554607444843632]   \n",
+       "40            0.5         600          80        50  [0.09615418500717368]   \n",
+       "45            0.5         600          80        50   [0.0970669556846124]   \n",
        "\n",
-       "                                             topology  \\\n",
-       "43  {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
-       "21  {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
-       "13  {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
-       "23  {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
-       "4   {0: ['input_0', None, [], [17, 18, 19, 20]], 1...   \n",
-       "\n",
-       "                                                stats           mean_metrics  \\\n",
-       "43  {'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...  [0.05366889570226624]   \n",
-       "21  {'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...  [0.05486601096901263]   \n",
-       "13  {'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...  [0.06383480719966235]   \n",
-       "23  {'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...   [0.0688110884419551]   \n",
-       "4   {'lambda_tikhonov': 0, 'max_epochs': 600, 'pat...  [0.08833891183080093]   \n",
-       "\n",
-       "           variance_metrics  \n",
-       "43  [0.0022088002976952703]  \n",
-       "21   [0.002637810196543145]  \n",
-       "13   [0.002266936382419492]  \n",
-       "23    [0.00332935855501964]  \n",
-       "4   [9.831747849976705e-05]  "
+       "            variance_metrics  \n",
+       "43   [0.0022088002976952703]  \n",
+       "21    [0.002637810196543145]  \n",
+       "13    [0.002266936382419492]  \n",
+       "23     [0.00332935855501964]  \n",
+       "4    [9.831747849976705e-05]  \n",
+       "51   [0.0023613496960930794]  \n",
+       "44    [0.009874041411055403]  \n",
+       "12   [0.0018015402965530375]  \n",
+       "40    [0.004677902041038896]  \n",
+       "45  [0.00032474112208915815]  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df.drop(['stats', 'topology'], axis=1).head(10)"
    ]
   },
   {
