--- a/notebook/ML_cup_gs.ipynb
+++ b/notebook/ML_cup_gs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,156 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature_1</th>\n",
-       "      <th>feature_2</th>\n",
-       "      <th>feature_3</th>\n",
-       "      <th>feature_4</th>\n",
-       "      <th>feature_5</th>\n",
-       "      <th>feature_6</th>\n",
-       "      <th>feature_7</th>\n",
-       "      <th>feature_8</th>\n",
-       "      <th>feature_9</th>\n",
-       "      <th>feature_10</th>\n",
-       "      <th>target_1</th>\n",
-       "      <th>target_2</th>\n",
-       "      <th>target_3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.800934</td>\n",
-       "      <td>-0.990276</td>\n",
-       "      <td>0.226158</td>\n",
-       "      <td>0.768514</td>\n",
-       "      <td>0.993124</td>\n",
-       "      <td>0.999534</td>\n",
-       "      <td>-0.488006</td>\n",
-       "      <td>-0.563080</td>\n",
-       "      <td>-0.982097</td>\n",
-       "      <td>0.903047</td>\n",
-       "      <td>2.862292</td>\n",
-       "      <td>-73.250626</td>\n",
-       "      <td>34.797096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.977344</td>\n",
-       "      <td>0.996272</td>\n",
-       "      <td>-0.998654</td>\n",
-       "      <td>0.999309</td>\n",
-       "      <td>0.690201</td>\n",
-       "      <td>-0.873598</td>\n",
-       "      <td>-0.392403</td>\n",
-       "      <td>0.885483</td>\n",
-       "      <td>0.338757</td>\n",
-       "      <td>0.519219</td>\n",
-       "      <td>7.412202</td>\n",
-       "      <td>15.241326</td>\n",
-       "      <td>13.434081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.992942</td>\n",
-       "      <td>0.117851</td>\n",
-       "      <td>0.881615</td>\n",
-       "      <td>0.900437</td>\n",
-       "      <td>0.500551</td>\n",
-       "      <td>0.977372</td>\n",
-       "      <td>-0.526107</td>\n",
-       "      <td>0.994627</td>\n",
-       "      <td>-0.957327</td>\n",
-       "      <td>-0.970248</td>\n",
-       "      <td>-68.328230</td>\n",
-       "      <td>-9.544518</td>\n",
-       "      <td>29.693083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.982040</td>\n",
-       "      <td>0.994964</td>\n",
-       "      <td>-0.998720</td>\n",
-       "      <td>0.999715</td>\n",
-       "      <td>0.918325</td>\n",
-       "      <td>-0.645299</td>\n",
-       "      <td>0.133023</td>\n",
-       "      <td>0.929495</td>\n",
-       "      <td>-0.127319</td>\n",
-       "      <td>0.296092</td>\n",
-       "      <td>4.824227</td>\n",
-       "      <td>10.145186</td>\n",
-       "      <td>13.908604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-0.895875</td>\n",
-       "      <td>0.970864</td>\n",
-       "      <td>-0.993168</td>\n",
-       "      <td>0.998157</td>\n",
-       "      <td>0.984975</td>\n",
-       "      <td>0.462339</td>\n",
-       "      <td>-0.791645</td>\n",
-       "      <td>0.955966</td>\n",
-       "      <td>-0.903829</td>\n",
-       "      <td>0.483108</td>\n",
-       "      <td>9.109800</td>\n",
-       "      <td>9.997098</td>\n",
-       "      <td>32.552475</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   feature_1  feature_2  feature_3  feature_4  feature_5  feature_6  \\\n",
-       "1   0.800934  -0.990276   0.226158   0.768514   0.993124   0.999534   \n",
-       "2  -0.977344   0.996272  -0.998654   0.999309   0.690201  -0.873598   \n",
-       "3   0.992942   0.117851   0.881615   0.900437   0.500551   0.977372   \n",
-       "4  -0.982040   0.994964  -0.998720   0.999715   0.918325  -0.645299   \n",
-       "5  -0.895875   0.970864  -0.993168   0.998157   0.984975   0.462339   \n",
-       "\n",
-       "   feature_7  feature_8  feature_9  feature_10   target_1   target_2  \\\n",
-       "1  -0.488006  -0.563080  -0.982097    0.903047   2.862292 -73.250626   \n",
-       "2  -0.392403   0.885483   0.338757    0.519219   7.412202  15.241326   \n",
-       "3  -0.526107   0.994627  -0.957327   -0.970248 -68.328230  -9.544518   \n",
-       "4   0.133023   0.929495  -0.127319    0.296092   4.824227  10.145186   \n",
-       "5  -0.791645   0.955966  -0.903829    0.483108   9.109800   9.997098   \n",
-       "\n",
-       "    target_3  \n",
-       "1  34.797096  \n",
-       "2  13.434081  \n",
-       "3  29.693083  \n",
-       "4  13.908604  \n",
-       "5  32.552475  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'float' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m scaler_in\u001b[38;5;241m.\u001b[39mfit(training_set[:,:TR_INPUT])\n\u001b[1;32m     24\u001b[0m scaler_out\u001b[38;5;241m.\u001b[39mfit(training_set[:,TR_INPUT:])\n\u001b[0;32m---> 26\u001b[0m tr_normalized \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mempty\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining_len\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTR_OUTPUT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mTR_INPUT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m tr_normalized[:,:TR_INPUT] \u001b[38;5;241m=\u001b[39m scaler_in\u001b[38;5;241m.\u001b[39mtransform(training_set[:,:TR_INPUT])\n\u001b[1;32m     28\u001b[0m tr_normalized[:,TR_INPUT:] \u001b[38;5;241m=\u001b[39m scaler_out\u001b[38;5;241m.\u001b[39mtransform(training_set[:,TR_INPUT:])\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
+     ]
     }
    ],
    "source": [
@@ -188,7 +51,7 @@
     "len_data = len(data_set)\n",
     "np.random.shuffle(data_set)\n",
     "\n",
-    "training_len = 0.8*len_data\n",
+    "training_len = int(0.8*len_data)\n",
     "\n",
     "training_set = data_set[:int(training_len)] # Training Set for KFold Cross Validation\n",
     "test_set = data_set[int(training_len):] # Hold Out Test Set\n",
@@ -212,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
