--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -147,11 +147,25 @@
     "    'patience':[10],\n",
     "    'topology': [str(tanh_l2)],\n",
     "}\n",
+    "hyperparam_grid = {\n",
+    "    'adamax' : [True],\n",
+    "    'adamax_learning_rate' : [0.02, 0.01],\n",
+    "    'exp_decay_rate_1':[0.9],\n",
+    "    'exp_decay_rate_2':[0.999],\n",
+    "    'lambda_tikhonov':[0.00001],\n",
+    "    'batch_size':[int(training_len/15)],\n",
+    "    'min_epochs': [20],\n",
+    "    'max_epochs':[200],\n",
+    "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
+    "    'error_increase_tolerance':[0.00001],\n",
+    "    'patience':[10],\n",
+    "    'topology': [str(tanh_l2)],\n",
+    "}\n",
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 6, True)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 5, 2, True)"
    ]
   }
  ],
