--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -129,97 +129,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_15929/212586989.py\", line 38, in <module>\n",
-      "    MS.grid_searchKF(tr_normalized, hyperparam_grid, {}, 5, 2, False)\n",
-      "  File \"/home/geco/ML_Proj_NN/src/ModelSelection.py\", line 355, in grid_searchKF\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/process.py\", line 149, in join\n",
-      "    res = self._popen.wait(timeout)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 43, in wait\n",
-      "    return self.poll(os.WNOHANG if timeout == 0.0 else 0)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 27, in poll\n",
-      "    pid, sts = os.waitpid(self.pid, flag)\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/executing/executing.py\", line 116, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "start288\n",
+      "start577\n"
      ]
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/single_layer.csv')\n",
+    "MS = ModelSelection('../data/gs_data/2l_relu.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.01, 0.1, 0.3, 0.5, 0.7],\n",
+    "    'learning_rate':[0.01, 0.1, 0.3, 0.5],\n",
     "    'lr_decay_tau':[200],\n",
     "    'adamax' : [True, False],\n",
-    "    'adamax_learning_rate' : [0.02, 0.01, 0.04, 0.06, 0.1],\n",
-    "    'exp_decay_rate_1':[0.9, 0.8],\n",
+    "    'adamax_learning_rate' : [0.01, 0.05, 0.1, 0.3],\n",
+    "    'exp_decay_rate_1':[0.9, 0.75],\n",
     "    'exp_decay_rate_2':[0.999, 0.5],\n",
     "    'alpha_momentum':[0, 0.5, 0.9],\n",
     "    'lambda_tikhonov':[0.00001, 0.0001],\n",
     "    'batch_size':[int(training_len/15)],\n",
     "    'min_epochs': [100],\n",
-    "    'max_epochs':[800],\n",
+    "    'max_epochs':[600],\n",
     "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
-    "    'error_increase_tolerance':[0.00001, 0.0001],\n",
+    "    'error_increase_tolerance':[0.0001],\n",
     "    'patience':[10],\n",
-    "    'topology': [str(tanh_l2)],\n",
+    "    'topology': [str(relu_l2)],\n",
     "}\n",
     "hyperparam_grid_2 = {\n",
     "    'adamax' : [True],\n",
@@ -233,13 +166,13 @@
     "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
     "    'error_increase_tolerance':[0.00001],\n",
     "    'patience':[10],\n",
-    "    'topology': [str(tanh_l2)],\n",
+    "    'topology': [str(relu_l2)],\n",
     "}\n",
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, {}, 5, 2, False)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 2, False)"
    ]
   }
  ],
