--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -129,8 +129,134 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start288\n",
-      "start577\n"
+      "tot conf: 56\n",
+      "start287\n",
+      "start357\n",
+      "start836\n",
+      "start505\n",
+      "start77\n",
+      "start901\n",
+      "start590\n",
+      "start859\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start360\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start145\n",
+      "start204\n",
+      "start891"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1238: RuntimeWarning: invalid value encountered in divide\n",
+      "  out[tuple(slice1)] = (f[tuple(slice4)] - f[tuple(slice2)]) / (2. * ax_dx)\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1275: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  a = -1.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1276: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  b = 2. / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1277: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  c = -0.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1238: RuntimeWarning: invalid value encountered in divide\n",
+      "  out[tuple(slice1)] = (f[tuple(slice4)] - f[tuple(slice2)]) / (2. * ax_dx)\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1275: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  a = -1.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1276: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  b = 2. / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1285: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  out[tuple(slice1)] = a * f[tuple(slice2)] + b * f[tuple(slice3)] + c * f[tuple(slice4)]\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1277: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  c = -0.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1292: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  a = 0.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1285: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  out[tuple(slice1)] = a * f[tuple(slice2)] + b * f[tuple(slice3)] + c * f[tuple(slice4)]\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1293: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  b = -2. / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1294: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  c = 1.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1292: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  a = 0.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1293: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  b = -2. / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1294: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  c = 1.5 / ax_dx\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1302: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  out[tuple(slice1)] = a * f[tuple(slice2)] + b * f[tuple(slice3)] + c * f[tuple(slice4)]\n",
+      "/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/numpy/lib/function_base.py:1302: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  out[tuple(slice1)] = a * f[tuple(slice2)] + b * f[tuple(slice3)] + c * f[tuple(slice4)]\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: invalid value encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: overflow encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:279: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:217: RuntimeWarning: invalid value encountered in subtract\n",
+      "  weight_update = weight_update - (lambda_tikhonov * tmp)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: overflow encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:279: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:217: RuntimeWarning: invalid value encountered in subtract\n",
+      "  weight_update = weight_update - (lambda_tikhonov * tmp)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: overflow encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:279: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:217: RuntimeWarning: invalid value encountered in subtract\n",
+      "  weight_update = weight_update - (lambda_tikhonov * tmp)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:209: RuntimeWarning: overflow encountered in divide\n",
+      "  dummy_1 = self.old_weight_update/self.exponentially_weighted_infinity_norm\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:279: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/geco/ML_Proj_NN/src/HiddenNeuron.py:217: RuntimeWarning: invalid value encountered in subtract\n",
+      "  weight_update = weight_update - (lambda_tikhonov * tmp)\n"
      ]
     }
    ],
@@ -154,25 +280,11 @@
     "    'patience':[10],\n",
     "    'topology': [str(relu_l2)],\n",
     "}\n",
-    "hyperparam_grid_2 = {\n",
-    "    'adamax' : [True],\n",
-    "    'adamax_learning_rate' : [0.02, 0.01],\n",
-    "    'exp_decay_rate_1':[0.9],\n",
-    "    'exp_decay_rate_2':[0.999],\n",
-    "    'lambda_tikhonov':[0.00001],\n",
-    "    'batch_size':[int(training_len/10)],\n",
-    "    'min_epochs': [0],\n",
-    "    'max_epochs':[10],\n",
-    "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
-    "    'error_increase_tolerance':[0.00001],\n",
-    "    'patience':[10],\n",
-    "    'topology': [str(relu_l2)],\n",
-    "}\n",
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 2, False)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, False)"
    ]
   }
  ],
