--- a/notebook/nn_test_monk_3.ipynb
+++ b/notebook/nn_test_monk_3.ipynb
@@ -580,12 +580,12 @@
     "MS = ModelSelection('../data/gs_data/monk_3_selection.csv')\n",
     "training_set = tr_df_OHE.values\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.1, 0.2, 0.3, 0.4, 0.5],\n",
-    "    'alpha_momentum':[0.3, 0.4, 0.5, 0.6, 0.7],\n",
-    "    'lambda_tikhonov':[0, 0.01, 0.001, 0.0001],\n",
-    "    'batch_size':[int(len(training_set)/15), 1, int(len(training_set)*0.8)], # minibatch, online, batch\n",
+    "    'learning_rate':[0.1, 0.3, 0.5],\n",
+    "    'alpha_momentum':[0.3, 0.5, 0.7],\n",
+    "    'lambda_tikhonov':[0, 0.001, 0.0001],\n",
+    "    'batch_size':[int(len(training_set)/15)], # minibatch, online, batch\n",
     "    'min_epochs': [80],\n",
-    "    'max_epochs':[600],\n",
+    "    'max_epochs':[400,600],\n",
     "    'error_decrease_tolerance':[0.00001],\n",
     "    'patience':[50],\n",
     "    'topology': [str(topology)],\n",
