--- a/notebook/nn_test_monk_1.ipynb
+++ b/notebook/nn_test_monk_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "389        3        3        1        1        3        2         1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "4      True     False         1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "389     False      True         1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "       [False, False, True, ..., False, True, 1]], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -626,15 +626,15 @@
     "MS = ModelSelection('../data/gs_data/monk_1_kf.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.5,0.6],\n",
+    "    'learning_rate':[0.3,0.5,0.6],\n",
     "    'adamax' : [False],\n",
-    "    'alpha_momentum':[0.4,0.5],\n",
+    "    'alpha_momentum':[0.4,0.5,0.6],\n",
     "    'lambda_tikhonov':[0],\n",
     "    'batch_size':[10, 20],\n",
     "    'min_epochs': [50],\n",
-    "    'max_epochs':[600],\n",
+    "    'max_epochs':[400, 600],\n",
     "    'error_increase_tolerance':[0.0001],\n",
-    "    'patience':[10],\n",
+    "    'patience':[10], \n",
     "    'topology': [str(topology)],\n",
     "}\n",
     "\n",
