--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -70,17 +70,8 @@
     "hidden_fun = 'ReLU'\n",
     "output_fun = 'identity'\n",
     "\n",
-    "relu_l2_big = create_stratified_topology([TR_INPUT,20, 20,TR_OUTPUT], \n",
-    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*20 + [[hidden_fun, [1]]]*20 + [[output_fun, []]]*TR_OUTPUT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NeuralNetwork.display_topology(relu_l2_big)"
+    "relu_l2_big = create_stratified_topology([TR_INPUT,16, 16,TR_OUTPUT], \n",
+    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*16 + [[hidden_fun, [1]]]*16 + [[output_fun, []]]*TR_OUTPUT)"
    ]
   },
   {
@@ -108,7 +99,7 @@
     "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
     "    'error_increase_tolerance':[0.0001],\n",
     "    'patience':[10],\n",
-    "    'topology': [str(relu_l2_big), str(relu_l2_big)],\n",
+    "    'topology': [str(relu_l2_big)],\n",
     "    \n",
     "    'adamax' : [True, False],\n",
     "    'adamax_learning_rate' : [0.005, 0.02, 0.03, 0.04],\n",
