--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/2l_relu.csv')\n",
+    "MS = ModelSelection('../data/gs_data/test.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.0001, 0.001],\n",
@@ -398,11 +398,27 @@
     "    \n",
     "    'collect_data' : [False],\n",
     "}\n",
+    "test = {\n",
+    "    'lambda_tikhonov':[0.0001, 0.001],\n",
+    "    'batch_size':[int(training_len/30)],\n",
+    "    'min_epochs': [100],\n",
+    "    'max_epochs':[600],\n",
+    "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
+    "    'error_increase_tolerance':[0.0001],\n",
+    "    'patience':[10],\n",
+    "    'topology': [str(relu_l2_big)],\n",
+    "    \n",
+    "    'learning_rate':[0.005],\n",
+    "    'lr_decay_tau':[250],\n",
+    "    'alpha_momentum':[0],\n",
+    "    \n",
+    "    'collect_data' : [False],\n",
+    "}\n",
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, False)"
+    "MS.grid_searchKF(tr_normalized, test, {}, 3, 1, False)"
    ]
   }
  ],
